--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "d3-force": "^3.0.0",
     "v-network-graph": "^0.9.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
